hard-gists/2220293/run.log
=== Docker Run Log for 2220293 ===
Started at: Mi 29. Okt 13:01:30 CET 2025

[2025-10-29 13:01:30] START: Running container for 2220293
[2025-10-29 13:01:30] SUCCESS: Container 056a6510cc0611b6b8b33e2206211f37b67d0a4169e71c1235e602bcab59c9f8 started for 2220293
=== Container logs for 2220293 ===
  File "/snippet.py", line 35
    print "YOU ARE THE ONE!!! CONGRATS"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2220293 ===
[2025-10-29 13:01:32] INFO: Container 056a6510cc0611b6b8b33e2206211f37b67d0a4169e71c1235e602bcab59c9f8 has stopped
